[project]
name = "secure-data"
version = "0.1.0"
description = "A secure data encryption and storage application built with Streamlit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.32.0",
    "cryptography==42.0.2",
    "numpy==1.26.4",  # Compatible with Python 3.12
    "pandas==2.2.0",  # Compatible with Python 3.12
    "protobuf==4.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
